@@ -17,6 +17,7 @@ Copyright: 2000, 2001, Paolo Molaro <lupus@debian.org>
            2011, Tim Retout <diocles@debian.org>
            2011, Ansgar Burchardt <ansgar@debian.org>
            2011, Maximilian Gass <mxey@cloudconnected.org>
+           2013, Axel Beckert <abe@debian.org>
 License: GPL-2
 
 License: GPL-2
